--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "^10.7.1",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.277.0",
-    "next": "13.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.2"
+    "firebase": "latest",
+    "framer-motion": "latest",
+    "lucide-react": "latest",
+   "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "tailwindcss": "latest"
   }
 }
