--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
-    "firebase": "latest",
-    "framer-motion": "latest",
-    "lucide-react": "latest",
-   "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "tailwindcss": "latest"
-  }
+"dependencies": {
+  "next": "latest",
+  "react": "latest",
+  "react-dom": "latest",
+  "firebase": "^10.7.1",
+  "framer-motion": "^10.16.4",
+  "lucide-react": "^0.277.0",
+  "tailwindcss": "^3.3.2"
+}
+
 }
