--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
 "dependencies": {
-  "next": "latest",
+  "next": "^13.4.19",
   "react": "latest",
   "react-dom": "latest",
   "firebase": "^10.7.1",
